--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.5.1",
+    "@emotion/react": "^11.14.0",
     "axios": "^1.7.9",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
